# mcmctoolbox

./: README.md  pyproject.toml  setup.py
.github/workflows/: deploy.yml
mcmctoolbox/: functoolbox.py  kernel.py  mcmc.py
